@@ -1,5 +1,12 @@
 Nobots
 
+8.x-1.1
+--------------------------------------------------------------------------------
+_Release Date: 2020-05-15_
+
+- D8CORE-1644: Dev branch workflow (fbc6f83)
+- Update nobots.info.yml (#8) (57b4c6c)
+
 8.x-1.0                                 2019-10-30
 --------------------------------------------------
 - Initial release.
